<?xml version="1.0"?>
<package>
  <name>gpsr</name>
  <version>0.0.0</version>
  <description>gpsr package</description>

  <maintainer email="bigbasketball568@yahoo.co.jp">Kouta Ohishi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>turtlebot_edu</run_depend>
  <run_depend>object_recog</run_depend>

</package>
